@@ -1,0 +1,17 @@
+<projectDescription>
+  <name>reference.proxy</name>
+  <comment>An OSGi bundle that tests the proxy behavior on an OSGi service reference</comment>
+  <projects>
+    <project>simple.service</project>
+    <project>spring-osgi-core</project>
+    <project>spring-osgi-io</project>
+  </projects>
+  <buildSpec>
+    <buildCommand>
+      <name>org.eclipse.jdt.core.javabuilder</name>
+    </buildCommand>
+  </buildSpec>
+  <natures>
+    <nature>org.eclipse.jdt.core.javanature</nature>
+  </natures>
+</projectDescription>
